[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dsa-sync"
version = "1.0.0"
description = "Local LeetCode to GitHub automation CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "PyYAML>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[project.scripts]
dsa-sync = "dsa_sync.main:app"

[tool.setuptools.packages.find]
where = ["src"]
